--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,1 +1,3 @@
-<p>content works!</p>
+<img src="assets/images/side_{{sidenum}}.png" alt="" >
+<br>
+<button (click)="getRandomDice()">Roll Dice</button>
