Final Commit Weiye Chen

--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,3 +1,3 @@
-<img src="assets/images/side_{{sidenum}}.png" alt="" >
+<img src="assets/images/side_{{side}}.png" alt="" >
 <br>
 <button (click)="getRandomDice()">Roll Dice</button>
